--- a/requirements.txt
+++ b/requirements.txt
@@ -1,158 +1,12 @@
-absl-py==0.13.0
-aiohttp==3.7.4.post0
-altgraph==0.17.2
-anyio==3.3.0
-appdirs==1.4.4
-argcomplete==1.12.3
-argon2-cffi==20.1.0
-astunparse==1.6.3
-async-generator==1.10
-async-timeout==3.0.1
-attrs==21.2.0
-Babel==2.9.1
-backcall==0.2.0
-backports.zoneinfo==0.2.1
-beautifulsoup4==4.10.0
-bleach==4.0.0
-bqplot==0.12.32
-cached-property==1.5.2
-cachetools==4.2.2
-certifi==2021.5.30
-cffi==1.14.6
-chardet==3.0.4
-charset-normalizer==2.0.4
-clang==5.0
-click==8.0.1
-colorama==0.4.4
-cryptography==36.0.1
-cssselect==1.1.0
-cycler==0.10.0
-dataclasses-json==0.5.6
-debugpy==1.4.1
-decorator==5.0.9
-defusedxml==0.7.1
-entrypoints==0.3
 Flask==2.0.1
-flatbuffers==1.12
-future==0.18.2
-gast==0.4.0
-google-auth==1.35.0
-google-auth-oauthlib==0.4.5
-google-pasta==0.2.0
-grpcio==1.39.0
-gunicorn==19.9.0
-h11==0.13.0
-h5py==3.1.0
-idna==2.8
-importlib-metadata==4.6.4
-insta-scrape==2.1.2
-IPCutils==0.1
-ipykernel==6.2.0
-ipython==7.26.0
-ipython-genutils==0.2.0
-ipywidgets==7.6.5
-itsdangerous==2.0.1
-jedi==0.18.0
-jeepney==0.7.1
-Jinja2==3.0.1
-joblib==1.0.1
-json5==0.9.6
-jsonschema==3.2.0
-keras==2.6.0
-Keras-Preprocessing==1.1.2
-kiwisolver==1.3.2
-lxml==4.7.1
-Markdown==3.3.4
-MarkupSafe==2.0.1
-marshmallow==3.14.1
-marshmallow-enum==1.5.1
+insta_scrape==2.1.2
+instascrape==0.1
 matplotlib==3.4.3
-matplotlib-inline==0.1.2
-mistune==0.8.4
-msl-loadlib==0.9.0
-multidict==5.1.0
-mypy-extensions==0.4.3
-nbclassic==0.3.1
-nbclient==0.5.4
-nbconvert==6.1.0
-nbformat==5.1.3
-nest-asyncio==1.5.1
 nltk==3.6.7
-notebook==6.4.3
 numpy==1.19.5
-oauthlib==3.1.1
-opencv-python==4.5.5.62
-opt-einsum==3.3.0
-outcome==1.1.0
-packaging==21.0
 pandas==1.3.3
-pandocfilters==1.4.3
-parse==1.19.0
-parso==0.8.2
-patsy==0.5.1
-pbkdf2==1.3
-pefile==2021.9.3
-pickle-mixin==1.0.2
-pickleshare==0.7.5
-Pillow==8.3.1
-prometheus-client==0.11.0
-prompt-toolkit==3.0.20
-protobuf==3.17.3
-pyaes==1.6.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pychalk==2.0.1
-pycparser==2.20
-pycryptodome==3.12.0
-pyee==8.2.2
-Pygments==2.10.0
-PyJWT==1.7.1
-pyOpenSSL==21.0.0
-pyparsing==2.4.7
-pyppeteer==1.0.2
-pyquery==1.4.3
-pyrsistent==0.18.0
-python-dateutil==2.8.2
-pytz==2021.1
-pytz-deprecation-shim==0.1.0.post0
-pyzmq==22.2.1
-regex==2022.1.18
 requests==2.27.1
-requests-oauthlib==1.3.0
-requests-unixsocket==0.2.0
-riotwatcher==3.2.0
-rsa==4.7.2
-scikit-learn==0.24.2
-SecretStorage==3.3.1
-selenium==4.1.0
-Send2Trash==1.8.0
-six==1.15.0
-sklearn==0.0
-sortedcontainers==2.4.0
-soupsieve==2.3.1
-tenacity==8.0.1
-termcolor==1.1.0
-terminado==0.11.1
-testpath==0.5.0
-text-unidecode==1.2
-threadpoolctl==2.2.0
-tqdm==4.62.3
-traitlets==5.0.5
-traittypes==0.2.1
-trio==0.19.0
-trio-websocket==0.9.2
-typing-extensions==3.7.4.3
-typing-inspect==0.7.1
-tzdata==2021.5
-tzlocal==4.1
-w3lib==1.22.0
-wcwidth==0.2.5
-webencodings==0.5.1
-websocket-client==1.2.1
-websockets==10.1
-Werkzeug==2.0.1
-widgetsnbextension==3.5.2
-wrapt==1.12.1
-wsproto==1.0.0
-yarl==1.6.3
-zipp==3.5.0
+scikit_learn==1.0.2
+seaborn==0.11.2
+selenium==4.1.3
+tweepy==4.4.0
