--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ nltk==3.6.7
 numpy==1.19.5
 pandas==1.3.3
 requests==2.27.1
-scikit_learn==1.0.2
+scikit-learn==0.24.2
 seaborn==0.11.2
 selenium==4.1.3
 tweepy==4.4.0
